test/classes/initializers/records/declaration2.good
declaration2.chpl:11: error: unresolved call 'Foo.init()'
declaration2.chpl:6: note: this candidate did not match: Foo.init(xVal: int)
declaration2.chpl:11: note: because call does not supply enough arguments
declaration2.chpl:6: note: it is missing a value for formal 'xVal: int(64)'
